--- a/Chansole/appsettings.json
+++ b/Chansole/appsettings.json
@@ -78,4 +78,8 @@
     "Destructure": [
     ]
   },
+  "LoggingInterceptor": {
+    "CompletionLevel": "Information",
+    "AbandonmentLevel": "Error"
+  }
 }
